# devproof-audits-guide

./: LEARNINGS.md  README.md
case-studies/confer/: DEVPROOF-REPORT.md  bundle.json  cert.pem  confer-client-implementation-plan.md  hashedrekord.json  private-inference-article.md  pubkey.pem  rekor_entry.json
case-studies/confer/confer-client/: pyproject.toml
case-studies/confer/confer-client/confer_client/: __init__.py
case-studies/confer/confer-client/confer_client/proto/: __init__.py
case-studies/hermes/: DEVPROOF-REPORT.md
case-studies/near-private-chat/: DEVPROOF-REPORT.md  NEAR-PRIVATE-CHAT-REPRODUCTION.md  nearai-llm-endpoint-code.py  query-compose-hashes.py
case-studies/primus/: DEVPROOF-REPORT.md
case-studies/talos/: TALOS_INVESTIGATION.md
case-studies/tee-totalled/: DEVPROOF-REPORT.md
case-studies/tokscope-xordi/: DEVPROOF-REPORT.md  SESSION-NOTES.md  deployed-app-compose.json
case-studies/xordi-toy-example/: DEVPROOF-REPORT.md
framework/: AUDIT-GUIDE.md  STAGE-1-CHECKLIST.md
framework/templates/: DEPLOYMENTS.md  DEVPROOF-REPORT.md  RELEASE-CHECKLIST.md
references/: disintermediation.md
tools/: README.md  verify-compose-hash.py
tools/.claude-plugin/: plugin.json
tools/commands/: audit.md
tools/skills/dstack-audit/: SKILL.md
tools/skills/dstack-audit/references/: search-patterns.md
tools/skills/dstack-audit/scripts/: audit-checks.sh
