[project]
name = "confer-client"
version = "0.1.0"
description = "Open-source Python client for Confer.to private AI inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "dissononce>=0.34.3",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "protobuf>=4.25.0",
    "sigstore>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
confer = "confer_client.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
